--- a/config/services.yaml
+++ b/config/services.yaml
@@ -21,5 +21,9 @@ services:
             - '../src/Kernel.php'
             - '../src/Tests/'
 
+    App\FFXIVApiClient:
+        arguments:
+            $key: '%env(XIVAPI_KEY)%'
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
