--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "symfony/runtime": "5.3.*",
         "symfony/security-bundle": "5.3.*",
         "symfony/yaml": "5.3.*",
-        "xivapi/xivapi-php": "^1.6"
+        "xivapi/xivapi-php": "^1.6",
+        "ext-json": "*"
     },
     "config": {
         "optimize-autoloader": true,
