--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
-        "php": ">=7.2",
+        "php": ">=8.0",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "composer/package-versions-deprecated": "1.11.99.2",
@@ -19,7 +19,7 @@
         "symfony/runtime": "5.3.*",
         "symfony/security-bundle": "5.3.*",
         "symfony/yaml": "5.3.*",
-        "xivapi/xivapi-php": "^1.6",
+        "xivapi/xivapi-php": "dev-master",
         "ext-json": "*"
     },
     "config": {
@@ -66,6 +66,8 @@
         }
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.33"
+        "infection/infection": "^0.25.0",
+        "symfony/maker-bundle": "^1.33",
+        "vimeo/psalm": "^4.10"
     }
 }
