--- a/composer.json
+++ b/composer.json
@@ -66,6 +66,7 @@
         }
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.1",
         "infection/infection": "^0.25.0",
         "symfony/maker-bundle": "^1.33",
         "vimeo/psalm": "^4.10"
