--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,19 @@ services:
             dockerfile: docker/Dockerfile
         volumes:
             - .:/var/www/
+    nginx:
+        image: nginx:alpine
+        links:
+            - php
+        volumes:
+            - .:/var/www/
+            - ./docker/nginx/ffxiv.conf:/etc/nginx/conf.d/default.conf
+            - ./var/nginx_logs/:/var/log/nginx/
+        labels:
+            - "traefik.enable=true"
+            - "traefik.http.routers.nginx.rule=Host(`ffxiv-content-checker.local`)"
+            - "traefik.http.services.nginx.loadbalancer.server.port=80"
+            - "traefik.http.routers.nginx.entrypoints=web"
     mysql:
         image: mysql:5.7
         environment:
